disabling history in HoshIT tests